# notipy

./: .gitignore  LICENSE  README.md  pyproject.toml
notipy/: __init__.py  main.py  notifier.py  runner.py  sender.py
