[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "notipy"
version = "0.1.0"
description = "Wrap any shell command and get an email notification with logs when it finishes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["notification", "email", "cli", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
notipy = "notipy.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notipy*"]
