[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notipy"
version = "0.1.0"
authors = [
    { name = "Artur Gasparyan", email = "gasparyanartur99@gmail.com" }
]
description = "Wrap any shell command and get a push notification via ntfy.sh when it finishes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["notification", "ntfy", "push", "cli", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
notipy = "notipy.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notipy*"]
